# microblog.pub

./: .build.yml  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  CLAUDE.md  Dockerfile  Makefile  README.md  babel.cfg  docker-compose.yml  pyproject.toml  tasks.py
.github/workflows/: pages.yml  unit-tests.yml
activitypub/: activitypub.py  actor.py  ap_object.py  boxes.py  incoming_activities.py  models.py  outgoing_activities.py
activitypub/tests/: conftest.py  factories.py  test_actor.py  test_inbox.py  test_outbox.py  test_outbox_api.py  test_process_outgoing_activities.py  test_remote_actor_deletion.py
alembic/: env.py
alembic/versions/: 2022_10_30_1409-b28c0551c236_add_a_slug_field_for_outbox_objects.py  2026_07_11_2029-6aafc8f7dd54_add_upload_description.py  2026_07_15_1022-bd38c89e83de_add_actor_outbox_backfilled_at.py  2026_07_15_1706-33d3ae2dedac_add_actor_counts_cache.py
app/: _version.py  admin.py  config.py  customization.py  httpsig.py  i18n.py  indieauth.py  ldsig.py  lookup.py  main.py  micropub.py  models.py  prune.py  source.py  templates.py  uploads.py  webmentions.py
app/mastodon/: entities.py  errors.py  ids.py  oauth.py  pagination.py  router.py  scopes.py  serializers.py
app/scss/: main.scss
app/static/: new.js  pwa.webmanifest
app/templates/: admin_direct_messages.html  admin_edit_text.html  admin_inbox.html  admin_new.html  admin_new_post.html  admin_outbox.html  admin_profile.html  articles.html  custom_page.html  followers.html  following.html  header.html  index.html  indieauth_flow.html  layout.html  login.html  lookup.html  notifications.html  object.html  redirect.html  redirect_to_remote_instance.html  remote_follow.html  remote_interact.html  utils.html
app/translations/: messages.pot
app/utils/: custom_index_handler.py  (+5 more)
data/: _theme.scss
docs/: conf.py  developer_guide.md  index.md  install.md  mastodon_api.md  requirements.txt  user_guide.md
misc/: docker_start.sh  gzip_rotated_logs.sh
tests/: conftest.py  test_admin.py  test_customization.py  test_emoji.py  test_httpsig.py  test_i18n.py  test_ioauth.py  test_ldsig.py  test_media_proxy.py  test_microdata.py  test_micropub.py  test_public.py  test_tags.py  utils.py
(+29 files in other folders)
