[tool.poetry]
name = "microblogpub"
version = "2.1.0"
description = "Self-hosted, single-user, ActivityPub-powered microblog"
authors = [
    "Thomas Sileo <t@a4.io>",
    "João Costa <jdpc557@gmail.com>",
    "Toni Hermoso Pulido <toniher@cau.cat>",
    "Nigini Oliveira <nigini@gmail.com>",
]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/toniher/microblog.pub"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.4"
fastapi = ">=0.115,<1.0"
pydantic = "^2.9"
pycryptodome = "^3.20"
bcrypt = "^4.2"
itsdangerous = "^2.1.2"
python-multipart = ">=0.0.9,<0.1"
tomli = "^2.0.1"
httpx = {version = ">=0.27,<0.29", extras = ["http2"]}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.54"}
alembic = "^1.13"
bleach = "^6.1.0"
prompt-toolkit = "^3.0.29"
tomli-w = "^1.0.0"
python-dateutil = "^2.8.2"
beautifulsoup4 = "^4.12"
html5lib = "^1.1"
mf2py = "^1.1.2"
Pygments = "^2.12.0"
loguru = "^0.7.2"
Pillow = ">=10.4,<12"
blurhash-python = "^1.1.3"
html2text = ">=2020.1.16,<2025"
feedgen = ">=0.9,<2"
emoji = "^2.8.0"
PyLD = "^2.0.3"
aiosqlite = ">=0.20,<1.0"
cachetools = "^5.2.0"
humanize = "^4.2.3"
tabulate = "^0.9.0"
asgiref = "^3.5.2"
supervisor = "^4.2.5"
invoke = "^2.2"
libsass = ">=0.22,<1.0"
boussole = "^2.0.0"
uvicorn = {extras = ["standard"], version = ">=0.30,<1.0"}
Brotli = "^1.0.9"
mistletoe = "^1.2.1"
Pebble = "^5.0.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.1"
mypy = "^1.13"
isort = "^5.13"
pytest = "^8.3"
respx = "^0.22"
types-bleach = "^6.1.0"
types-Markdown = "^3.7"
factory-boy = "^3.3"
pytest-asyncio = "^0.24"
types-cachetools = "^5.2.1"
sqlalchemy2-stubs = "^0.0.2-alpha.24"
types-python-dateutil = "^2.8.18"
types-tabulate = "^0.9.0"
types-requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ["alembic/versions/"]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[tool.black]
extend-exclude = '''
/(
  | alembic/versions
)/
'''

[tool.pytest.ini_options]
asyncio_mode = "strict"
